--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bluetooth_Monitor</string>
+    <string name="switch_on_bluetooth">Включите Bluetooth</string>
 </resources>
